Fixed the navigation bar to have it stretch to 1920 pixels.

--- a/client/src/Components/NavigationBar.css
+++ b/client/src/Components/NavigationBar.css
@@ -29,11 +29,23 @@
     font-family: 'Poppins', sans-serif;
 }
 
+/*
 *{
-    border: 0;
-    padding: 0;
+    box-sizing: border-box;
     margin: 0;
+    padding: 0;
 }
+
+.home, .about, .leagues, .fixtures, .clubs, .players {
+    color: #fff;
+    text-decoration: none;
+    font-size: 3rem;
+    height: 90vh;
+    display: flex;
+    align-items: center;
+}
+*/
+
 
 .nav-menu {
     display: grid;
